--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   -->
     <link
       rel="shortcut icon"
-      href="./Images/logo.jpeg"
+      href="Images/logo.jpeg"
       type="image/x-icon"
     />
 
@@ -49,7 +49,7 @@
         <div class="sidebar-info">
           <figure class="avatar-box">
             <img
-              src="./Images/avatar.png"
+              src="Images/avatar.png"
               alt="Abiodun Olaoluwa"
               width="80"
             />
@@ -227,7 +227,7 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-design.svg
+                    src="Images/icon-design.svg
                 "
                     alt="design icon"
                     width="40"
@@ -247,7 +247,7 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-dev.svg"
+                    src="Images/icon-dev.svg"
                     alt="Web development icon"
                     width="40"
                   />
@@ -265,7 +265,7 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-app.svg"
+                    src="Images/icon-app.svg"
                     alt="mobile app icon"
                     width="40"
                   />
@@ -284,7 +284,7 @@
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
-                    src="./images/icon-photo.svg"
+                    src="Images/icon-photo.svg"
                     alt="camera icon"
                     width="40"
                   />
@@ -314,7 +314,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="./images/avatar-1.png"
+                      src="Images/avatar-1.png"
                       alt="Daniel lewis"
                       width="60"
                       data-testimonials-avatar
@@ -345,7 +345,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="./images/avatar-2.png"
+                      src="Images/avatar-2.png"
                       alt="Jessica miller"
                       width="60"
                       data-testimonials-avatar
@@ -376,7 +376,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="./images/avatar-3.png"
+                      src="Images/avatar-3.png"
                       alt="Emily evans"
                       width="60"
                       data-testimonials-avatar
@@ -407,7 +407,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="./images/avatar-4.png"
+                      src="Images/avatar-4.png"
                       alt="Henry william"
                       width="60"
                       data-testimonials-avatar
@@ -451,14 +451,14 @@
               <div class="modal-img-wrapper">
                 <figure class="modal-avatar-box">
                   <img
-                    src="./images/avatar-1.png"
+                    src="Images/avatar-1.png"
                     alt="Daniel lewis"
                     width="80"
                     data-modal-img
                   />
                 </figure>
 
-                <img src="./images/icon-quote.svg" alt="quote icon" />
+                <img src="Images/icon-quote.svg" alt="quote icon" />
               </div>
 
               <div class="modal-content">
@@ -491,7 +491,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-1-color.png"
+                    src="Images/logo-1-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -500,7 +500,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-2-color.png"
+                    src="Images/logo-2-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -509,7 +509,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-3-color.png"
+                    src="Images/logo-3-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -518,7 +518,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-4-color.png"
+                    src="Images/logo-4-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -527,7 +527,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-5-color.png"
+                    src="Images/logo-5-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -536,7 +536,7 @@
               <li class="clients-item">
                 <a href="#">
                   <img
-                    src="./images/logo-6-color.png"
+                    src="Images/logo-6-color.png"
                     alt="client logo"
                   />
                 </a>
@@ -775,7 +775,7 @@
                     </div>
 
                     <img
-                      src="./images/project-1.jpg"
+                      src="Images/project-1.jpg"
                       alt="finance"
                       loading="lazy"
                     />
@@ -799,7 +799,7 @@
                     </div>
 
                     <img
-                      src="./images/project-2.png"
+                      src="Images/project-2.png"
                       alt="orizon"
                       loading="lazy"
                     />
@@ -823,7 +823,7 @@
                     </div>
 
                     <img
-                      src="./images/project-3.jpg"
+                      src="Images/project-3.jpg"
                       alt="fundo"
                       loading="lazy"
                     />
@@ -847,7 +847,7 @@
                     </div>
 
                     <img
-                      src="./images/project-4.png"
+                      src="Images/project-4.png"
                       alt="brawlhalla"
                       loading="lazy"
                     />
@@ -871,7 +871,7 @@
                     </div>
 
                     <img
-                      src="./images/project-5.png"
+                      src="Images/project-5.png"
                       alt="dsm."
                       loading="lazy"
                     />
@@ -895,7 +895,7 @@
                     </div>
 
                     <img
-                      src="./images/project-6.png"
+                      src="Images/project-6.png"
                       alt="metaspark"
                       loading="lazy"
                     />
@@ -919,7 +919,7 @@
                     </div>
 
                     <img
-                      src="./images/project-7.png"
+                      src="Images/project-7.png"
                       alt="summary"
                       loading="lazy"
                     />
@@ -943,7 +943,7 @@
                     </div>
 
                     <img
-                      src="./images/project-8.jpg"
+                      src="Images/project-8.jpg"
                       alt="task manager"
                       loading="lazy"
                     />
@@ -967,7 +967,7 @@
                     </div>
 
                     <img
-                      src="./images/project-9.png"
+                      src="Images/project-9.png"
                       alt="arrival"
                       loading="lazy"
                     />
@@ -997,7 +997,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-1.jpg"
+                      src="Images/blog-1.jpg"
                       alt="Design conferences in 2022"
                       loading="lazy"
                     />
@@ -1028,7 +1028,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-2.jpg"
+                      src="Images/blog-2.jpg"
                       alt="Best fonts every designer"
                       loading="lazy"
                     />
@@ -1059,7 +1059,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-3.jpg"
+                      src="Images/blog-3.jpg"
                       alt="Design digest #80"
                       loading="lazy"
                     />
@@ -1088,7 +1088,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-4.jpg"
+                      src="Images/blog-4.jpg"
                       alt="UI interactions of the week"
                       loading="lazy"
                     />
@@ -1119,7 +1119,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-5.jpg"
+                      src="Images/blog-5.jpg"
                       alt="The forgotten art of spacing"
                       loading="lazy"
                     />
@@ -1150,7 +1150,7 @@
                 <a href="#">
                   <figure class="blog-banner-box">
                     <img
-                      src="./images/blog-6.jpg"
+                      src="Images/blog-6.jpg"
                       alt="Design digest #79"
                       loading="lazy"
                     />
