Did the testimonial for Quadri

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
                     <img
-                      src="Images/avatar-1.png"
+                      src="Images/feranmi.png"
                       alt="Oluwaferanmi Quadri"
                       width="60"
                       data-testimonials-avatar
@@ -328,12 +328,11 @@
 
                   <div class="testimonials-text" data-testimonials-text>
                     <p>
-                      Ola was hired to create a corporate identity. We were
-                      very pleased with the work done. He has a lot of
-                      experience and is very concerned about the needs of
-                      client. Lorem ipsum dolor sit amet, ullamcous cididt
-                      consectetur adipiscing elit, seds do et eiusmod tempor
-                      incididunt ut laborels dolore magnarels alia.
+                        As a writer, staying on track with my writing sessions has always been a challenge. That's where Olaoluwa's Notemaster web app came in and completely revolutionized my workflow. From tracking the duration of my writing sessions to monitoring my break times and distraction rates, Notemaster has been a game-changer.
+
+                        Olaoluwa didn’t just meet my expectations; he exceeded them in every possible way. The personalized recommendations based on my writing data have helped me become more productive and focused. The app’s user-friendly interface and insightful graphs have made it easier than ever to understand and improve my writing habits.
+                        
+                        Working with Olaoluwa was a fantastic experience. He was attentive to my needs, incredibly responsive, and always went the extra mile to ensure I was satisfied. I couldn’t be happier with the outcome, and I wholeheartedly recommend Olaoluwa to anyone looking for a dedicated and talented developer. Notemaster has become an indispensable tool in my writing toolkit, and I have Olaoluwa to thank for that.
                     </p>
                   </div>
                 </div>
