--- a/index.html
+++ b/index.html
@@ -328,10 +328,8 @@
 
                   <div class="testimonials-text" data-testimonials-text>
                     <p>
-                        As a writer, staying on track with my writing sessions has always been a challenge. That's where Olaoluwa's Notemaster web app came in and completely revolutionized my workflow. From tracking the duration of my writing sessions to monitoring my break times and distraction rates, Notemaster has been a game-changer.
-
-                        Olaoluwa didn’t just meet my expectations; he exceeded them in every possible way. The personalized recommendations based on my writing data have helped me become more productive and focused. The app’s user-friendly interface and insightful graphs have made it easier than ever to understand and improve my writing habits.
-                        
+                        As a writer, staying on track with my writing sessions has always been a challenge. That's where Olaoluwa's Notemaster web app came in and completely revolutionized my workflow. From tracking the duration of my writing sessions to monitoring my break times and distraction rates, Notemaster has been a game-changer. <br> <br>
+                        Olaoluwa didn’t just meet my expectations; he exceeded them in every possible way. The personalized recommendations based on my writing data have helped me become more productive and focused. The app’s user-friendly interface and insightful graphs have made it easier than ever to understand and improve my writing habits. <br> <br>
                         Working with Olaoluwa was a fantastic experience. He was attentive to my needs, incredibly responsive, and always went the extra mile to ensure I was satisfied. I couldn’t be happier with the outcome, and I wholeheartedly recommend Olaoluwa to anyone looking for a dedicated and talented developer. Notemaster has become an indispensable tool in my writing toolkit, and I have Olaoluwa to thank for that.
                     </p>
                   </div>
