--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
           <section class="about-text">
             <p>
               I'm a Full-Stack Developer based in Lagos, Nigeria, specializing
-              in web development. With a strong background in HTML5, CSS3,
-              JavaScript, React, Axios, Redux, JSON handling, Express, and
+              in web development. With a strong background in React, Axios, RESTful APIs handling, JSON handling, Express, and
               PostgreSQL, I enjoy transforming complex challenges into elegant,
               functional, and user-friendly solutions.
             </p>
