--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="HandheldFriendly" content="true">
+    <meta name="author" content="Abiodun Olaoluwa Solomon">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Abiodun Olaoluwa Solomon's Portfolio Site">
     <title>Abiodun Olaoluwa Solomon</title>
 
     <!--
