--- a/index.html
+++ b/index.html
@@ -790,6 +790,22 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
+                  Mosh Hamedani's Ultimate NextJs Course
+                </h4>
+
+                <span>2024</span>
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Mosh Hamedani's Ultimate TypeScript Course
+                </h4>
+
+                <span>2024</span>
+              </li>
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
                   Angela Yu's Full-Stack Web Development Training
                 </h4>
 
@@ -876,22 +892,33 @@
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Web design</h5>
-                  <data value="50">50%</data>
+                  <data value="55">55%</data>
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
+                  <div class="skill-progress-fill" style="width: 55%"></div>
                 </div>
               </li>
 
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Web Development</h5>
-                  <data value="75">75%</data>
+                  <data value="85">85%</data>
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 75%"></div>
+                  <div class="skill-progress-fill" style="width: 85%"></div>
+                </div>
+              </li>
+
+              <li class="skills-item">
+                <div class="title-wrapper">
+                  <h5 class="h5">Relational Database Setup and Management (PostgreSQL)</h5>
+                  <data value="70">70%</data>
+                </div>
+
+                <div class="skill-progress-bg">
+                  <div class="skill-progress-fill" style="width: 70%"></div>
                 </div>
               </li>
 
@@ -906,16 +933,6 @@
                 </div>
               </li>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Mobile App Development</h5>
-                  <data value="20">20%</data>
-                </div>
-
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 20%"></div>
-                </div>
-              </li>
             </ul>
           </section>
           <div class="download-resume-button">
