Edited the devlinks project details

--- a/index.html
+++ b/index.html
@@ -664,7 +664,11 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Devlinks Web App - A fully-functional link sharing platform
+                  <a
+                    href="https://aosdevlinks.vercel.app"
+                    target="_blank"
+                    class="links"
+                    >DevLinks</a> Web App - A fully-functional link sharing platform
                   for developers.
                 </h4>
 
@@ -690,7 +694,8 @@
                   - Applied Prisma as the database ORM, enabling efficient user
                   data storage and retrieval. <br />
                   - Skills: Next.js, TypeScript, Prisma, React.js, Cloudinary,
-                  CSS, HTML5, Node.js, PostgreSQL.
+                  CSS, HTML5, Node.js, PostgreSQL. <br>
+                  - Demo Login Details: Email: {admin@devlinks.com}; Password: {admin}
                 </p>
               </li>
 
