Added the DSA course to the resume page and removed the information about primary and secondary school

--- a/index.html
+++ b/index.html
@@ -794,28 +794,8 @@
 
                 <p class="timeline-text">
                   B.Sc Industrial Physics and Renewable Energy <br />
-                  Grade: Second Class Upper.
+                  Grade: Second Class Upper (2:1).
                 </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Elim Private Academy</h4>
-
-                <span>2018 - 2020</span>
-
-                <p class="timeline-text">
-                  Senior Secondary Certificate of Education
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  Triple 'P' Heritage Schools
-                </h4>
-
-                <span>2010 - 2018</span>
-
-                <p class="timeline-text">Junior Certicate of Education.</p>
               </li>
             </ol>
           </section>
@@ -830,6 +810,15 @@
             </div>
 
             <ol class="timeline-list">
+
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  <a href="https://ude.my/UC-45b11578-754d-4ab0-a4e4-9a5cd0474ab0" class="links">Colt Steele's JavaScript Algorithms and Data Structures Masterclass</a>
+                </h4>
+
+                <span>2024</span>
+              </li>
+
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
                   Mosh Hamedani's Ultimate NextJs Course
